--- a/js/components/mixing.styl
+++ b/js/components/mixing.styl
@@ -4,7 +4,7 @@ $light-green= #49a09d
 $deep-pink= #EF49B7
 
 $bubble-size= 80px
-$max-scale-factor = 2.25
+$max-scale-factor = 1.4
 
 .Mixing-bubble
   width $bubble-size
@@ -12,34 +12,57 @@ $max-scale-factor = 2.25
   border-radius $bubble-size
   background-color grayscale(salmon)
   color white
-  margin (@height * $max-scale-factor / 2) (@width * $max-scale-factor / 2)
+  // margin (@height * $max-scale-factor / 2) (@width * $max-scale-factor / 2)
   transition transform 0.2s ease-out, background-color 0.2s ease-out
   background-size cover
   background-color grey
   background-blend-mode soft-light
+  position absolute
+
+  h1
+    position relative
+    text-transform capitalize
+    font-weight 600
+    text-align center
+    transform translateY(66%)
+    margin 0
+
 
 // samplenames: ['cafe', 'fire', 'jungle', 'rain', 'river', 'seawaves', 'wind']
 .Mixing-bubble-cafe
   background-image url('/images/cafe-icon.jpg')
+  top ($bubble-size * $max-scale-factor)
+  left calc(50vw - 104px)
 
 .Mixing-bubble-fire
   background-image url('/images/fire-icon.jpg')
+  top ($bubble-size * $max-scale-factor)
+  left calc(50vw + 30px)
 
 .Mixing-bubble-jungle
   background-image url('/images/jungle-icon.jpg')
+  top ($bubble-size * $max-scale-factor * 2.1)
+  left calc(50vw - 160px)
 
 .Mixing-bubble-rain
   background-image url('/images/rain-icon.jpg')
+  top ($bubble-size * $max-scale-factor * 2.1)
+  left calc(50vw - 34px)
 
 .Mixing-bubble-river
   background-image url('/images/river-icon.jpg')
+  top ($bubble-size * $max-scale-factor * 2.1)
+  left calc(50vw + 90px)
 
 .Mixing-bubble-seawaves
   background-image url('/images/seawaves-icon.jpg')
+  top ($bubble-size * $max-scale-factor * 3.3)
+  left calc(50vw - 104px)
 
 .Mixing-bubble-wind
   background-image url('/images/wind-icon.jpg')
-
+  top ($bubble-size * $max-scale-factor * 3.3)
+  left calc(50vw + 30px)
 
 .Mixing-ripple
   width 300px
@@ -63,7 +86,7 @@ $max-scale-factor = 2.25
   transform scale(0.6)
 
 .Mixing-bubble-2
-  transform scale(1.5)
+  transform scale(1.2)
   background-color shade($deep-pink, 20%)
 
 .Mixing-bubble-3
@@ -71,8 +94,12 @@ $max-scale-factor = 2.25
   background-color $deep-pink
 
 .Mixing-section
-  background-image linear-gradient(90deg, $light-purple 10%, $light-green 90%)
-  display flex
-  flex-wrap wrap
-  align-items center
-  justify-content space-around
+  background-color black
+  // display flex
+  // flex-wrap wrap
+  // align-items center
+  // justify-content space-around
+  border-radius 10px 10px 0 0
+  margin 8px
+  height calc(100vh - 128px)
+  overflow hidden
