Mixing screen transitions to Compose

--- a/js/components/player.styl
+++ b/js/components/player.styl
@@ -5,14 +5,15 @@ $bright-blue= #55ccff
 .Player
   position fixed
   bottom 0
-  left 8px
-  z-index 1
+  left 0
   height 120px
   background-color black
-  width calc(100vw - 16px)
+  width 100vw
+  padding 8px
   display flex
   align-items center
   justify-content space-between
+  z-index 10
 
 .Player button.btn-play
   border none
@@ -39,7 +40,7 @@ $bright-blue= #55ccff
   color white
   padding 1rem
   margin-right 1rem
-  
+
 
 // .Player input[type=range]
 //   -webkit-appearance none
