--- a/js/components/main.styl
+++ b/js/components/main.styl
@@ -14,6 +14,17 @@ body
   height 100vh
   margin 0 auto
   overflow scroll
-  position relative
+  position absolute
+  top 0
+  left 0
   // background-image linear-gradient(90deg, $light-purple 10%, $light-green 90%)
   background-color black
+
+button
+  background transparent
+  border-radius 10px
+  border 1px solid white
+  color white
+  padding 1rem
+  margin-right 1rem
+  padding-bottom 2rem
