--- a/js/components/mixing.styl
+++ b/js/components/mixing.styl
@@ -27,8 +27,6 @@ $max-scale-factor = 1.4
     transform translateY(66%)
     margin 0
 
-
-// samplenames: ['cafe', 'fire', 'jungle', 'rain', 'river', 'seawaves', 'wind']
 .Mixing-bubble-cafe
   background-image url('/images/cafe-icon.jpg')
   top ($bubble-size * $max-scale-factor)
@@ -63,6 +61,26 @@ $max-scale-factor = 1.4
   background-image url('/images/wind-icon.jpg')
   top ($bubble-size * $max-scale-factor * 3.3)
   left calc(50vw + 30px)
+
+.Mixing-panel
+  transition all 800ms cubic-bezier(0.175, 0.885, 0.335, 1.05)
+  z-index 9
+
+.Mixing-panel-hidden
+  transform translate3d(-80%, 0, 0) scale3d(0.65, 0.65, 1)
+  opacity 0.9
+
+.Mixing-header
+  position absolute
+  top 0
+  width 100vw
+
+  h1
+    float right
+    margin 0
+    padding 0.8rem 1rem
+    font-weight 300
+    font-size 1em
 
 .Mixing-ripple
   width 300px
