Transitions confirmed working

--- a/js/components/mixing.styl
+++ b/js/components/mixing.styl
@@ -117,7 +117,7 @@ $max-scale-factor = 1.4
   // flex-wrap wrap
   // align-items center
   // justify-content space-around
-  border-radius 10px 10px 0 0
+  // border-radius 10px 10px 0 0
   margin 8px
   height calc(100vh - 128px)
   overflow hidden
