Fixed tag bug with New age

--- a/js/components/library.styl
+++ b/js/components/library.styl
@@ -2,8 +2,14 @@ $deep-pink= #EF49B7
 
 .Library-Panel
   margin 8px
-  height calc(100vh - 128px)
+  height calc(100vh - 152px)
   overflow scroll
+  display flex
+  flex-direction column
+
+  ul
+    margin 0
+    padding 0
 
 .Library-Item
   width 100%
